classDiagram
    direction TB
    
    class AnaliticaController {
        <<Session Facade / GRASP Controller>>
        -_repo : IHistorialRepository
        +obtener_debilidades_grupales(id_tecnica) Dict
    }
    
    class IHistorialRepository {
        <<interface / Protected Variations>>
        +guardar_evaluacion(id_alumno, id_tecnica, resultado) String
        +obtener_progreso(id_alumno) List~Dict~
        +listar_todas(id_tecnica) List~Dict~
    }
    
    class PostgresHistorialRepository {
        <<Implementación>>
        -_db : String
        +guardar_evaluacion(id_alumno, id_tecnica, resultado) String
        +obtener_progreso(id_alumno) List~Dict~
        +listar_todas(id_tecnica) List~Dict~
    }

    AnaliticaController --> IHistorialRepository : consulta
    PostgresHistorialRepository ..|> IHistorialRepository : realiza
